# rent-and-you

./: README.md  docker-compose-override.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
backend/: Dockerfile  README.md  backend.dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  config.py  dependencies.py  initial_data.py  main.py
backend/app/core/: auth.py  config.py
backend/app/core/database/postgres/: database.py
backend/app/core/error/: auth_exception.py  base_exception.py  invalid_operation_exception.py  login_exception.py  office_exception.py  rent_exception.py  rgpd_exception.py  task_exception.py  user_exception.py  vehicle_exception.py
backend/app/core/models/postgres/: models.py
backend/app/core/repositories/: base_repository.py
backend/app/core/services/: base_query_service.py
backend/app/core/unit_of_work/: unit_of_work.py
backend/app/modules/auth/: dependencies.py
backend/app/modules/auth/data/models/: auth.py
backend/app/modules/auth/data/repositories/: auth_repository_impl.py  auth_unit_of_work_impl.py
backend/app/modules/auth/data/services/: auth_query_service_impl.py
backend/app/modules/auth/domain/entities/: auth_common_model.py  auth_entity.py
backend/app/modules/auth/domain/repositories/: auth_repository.py  auth_unit_of_work.py
backend/app/modules/auth/domain/services/: auth_query_service.py
backend/app/modules/auth/domain/usecases/: auth_signin.py  get_auth.py  get_user_me.py  get_user_rents.py  login_access_token.py  update_user_me.py
backend/app/modules/auth/presentation/routes/: __init__.py  auth_routes.py  auth_signin_route.py  auth_signup_route.py  get_user_me_route.py  get_user_rents_route.py  login_access_token_route.py  (+2 more)
backend/app/modules/office/: dependencies.py
backend/app/modules/rent/: dependencies.py
backend/app/modules/rgpd/: dependencies.py
backend/app/modules/user/: dependencies.py
backend/app/modules/vehicle/: dependencies.py
(+262 files in other folders)
