[tool.poetry]
name = 'RentAndYou'
version = '0.1.0'
description = 'RentAndYou app'
authors = ['Jordi Sánchez <jordisanchezmora98@gmail.com>']

[tool.poetry.dependencies]
python = "^3.10"
fastapi = '^0.78.0'
psycopg2 = '^2.9.3'
uvicorn = { extras = ['standard'], version = '^0.17.6' }
six = "^1.16.0"
fastapi-auth-middleware = "^1.0.2"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
yapf = {version = "^0.32.0" }
mypy = "^0.960"
pycodestyle = "^2.8.0"
pytest = "^7.1.2"
pylint = "^2.13.9"
SQLAlchemy = { extras = ["mypy"], version = "^1.4.36" }


[tool.yapf]
based_on_style = 'google'
spaces_before_comment = 2
split_before_logical_operator = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
